# goldsmith_erp

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUTH_USER_TEST_PLAN.md  CLAUDE.md  Containerfile  DASHBOARD_ENHANCEMENT_PLAN.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPENDENCY_VULNERABILITY_FIX_PLAN.md  Dockerfile  FEATURE_SPEC_TIME_TRACKING_ML.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  MVP_ANALYSIS.md  Makefile  NEXT_PHASE_IMPLEMENTATION_PLAN.md  NEXT_PHASE_SUMMARY.md  ORDERS_ENHANCEMENT_PLAN.md  P0_IMPLEMENTATION_PLAN.md  README.md  SECURITY_FIX_PLAN.md  VULNERABILITY_AUDIT_RESULTS.md  alembic.ini  docker-compose.yml  package-lock.json  podman-compose.prod.yml  podman-compose.yml  podman-pod.yaml  pyproject.toml  pytest.ini  setup-podman.sh  setup.sh
.claude/: settings.json
.claude/agents/: behavioral-psychologist.md  community-manager.md  compliance-officer.md  design-lead.md  goldsmith-expert.md  operations-lead.md  product-lead.md  retention-strategist.md  technical-lead.md  ux-researcher.md
.claude/hooks/: session-start.js  statusline.js
.github/workflows/: bundle-size-gate.yml  ci.yml
.truecourse/: config.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_gdpr_compliance.py  003_order_management.py  20260331_add_comments_and_measurements.py  20260331_add_customer_measurements_table.py  20260331_add_hallmarks_and_valuations.py  20260331_add_ml_fields_to_orders.py  20260331_add_notification_tables.py  20260331_add_order_handoffs_table.py  20260401_add_birthday_reminder_notification_type.py  20260401_add_goldsmith_order_fields.py  20260401_v1_initial_schema.py  20260406_add_audit_gdpr_order_items_status_history.py  20260417_add_anonymize_user_infrastructure.py  20260418_add_qr_barcode_core_tables.py  20260419_slice_2_security_floor_and_audit_columns.py  20260420_h9_explicit_ondelete_restrict.py  20260424_c1_customer_pii_encryption.py  20260424_c3_valuation_encryption.py  20260527_d1_activity_is_billable.py  20260610_e1_gdpr_audit_nofk.py  20260702_v11a_consultation_tables.py  20260703_i12_no_go_unique_index.py  (+12 more)
alembic_backup/: env.py
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEPLOYMENT.md  DEPLOYMENT_LOCAL.md  FEATURE_CUSTOMER_MANAGEMENT.md  FEATURE_TIME_TRACKING.md  FEATURE_USER_MANAGEMENT.md  GDPR_COMPLIANCE.md  IMPLEMENTATION_PLAN.md  INDEX.md  PHASE_1.6_COMPLETE.md  PHASE_1.7_COMPLETE.md  PHASE_1.8_PLAN.md  PHASE_1.8_TESTING_PLAN.md  ROADMAP.md  TESTING.md  USER_GETTING_STARTED.md  USER_ROLES_PERMISSIONS.md  WORKFLOWS.md
frontend/: .env.example  Containerfile  Dockerfile  TEST_README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: audit_time_entry_metadata.py  backup-sync.sh  backup.sh  check-migrations.sh  create-admin.py  gdpr-cleanup.sh  goldsmith-erp.service.template  migrate_users_to_customers.py  restore.sh  rotate-secrets.sh  seed_data.py  seed_demo.py  test-compose-validation.sh
tests/: conftest.py  test_basic_setup.py  test_customer_gdpr.py  test_customer_repository.py
(+681 files in other folders)
