[tool.poetry]
name = "goldsmith_erp"
version = "0.1.0"
description = "Skalierbares, sicheres und erweiterbares ERP-System für Goldschmiede"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "goldsmith_erp", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.10"
fastapi = "^0.100.0"
pydantic = "^2.2.0"
uvicorn = { version = "^0.23.0", extras = ["standard"] }
sqlalchemy = "^2.0.20"
asyncpg = "^0.27.0"
redis = "^4.5.5"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
boto3 = "^1.30.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.6"
pyjwt = "^2.7.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.16.0"
mypy = "^1.4.1"
bandit = "^1.8.1"
pre-commit = "^3.3.0"

[tool.poetry.extras]
ml = [
    "tesseract",
    "torch",
    "tensorflow",
    "scikit-learn",
    "xgboost",
    "transformers"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
plugins = []

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116"   # missing-function-docstring
]

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
