[tool.poetry]
name = "goldsmith_erp"
version = "0.1.0"
description = "Skalierbares, sicheres und erweiterbares ERP-System für Goldschmiede"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "goldsmith_erp", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.11"
fastapi = "^0.115.0"
pydantic = "^2.10.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
sqlalchemy = "^2.0.35"
asyncpg = "^0.30.0"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
boto3 = "^1.35.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.12"
pyjwt = "^2.9.0"
pydantic-settings = "^2.6.0"
email-validator = "^2.3.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.0"
pylint = "^3.0.0"
mypy = "^1.8.0"
bandit = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.extras]
ml = [
    "tesseract",
    "torch",
    "tensorflow",
    "scikit-learn",
    "xgboost",
    "transformers"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
plugins = []

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116"   # missing-function-docstring
]

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
